--- a/app/src/main/res/layout/playlist_recycle_grid_item.xml
+++ b/app/src/main/res/layout/playlist_recycle_grid_item.xml
@@ -24,15 +24,9 @@
             android:text="TextView"
             android:textColor="@color/white"
             android:textSize="20dp"
+            android:padding="8dp"
             android:textStyle="bold" />
 
-        <ImageButton
-            android:id="@+id/img_btn_delete_playlist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:background="@color/black"
-            android:src="@drawable/baseline_delete_24" />
     </LinearLayout>
 
     <TextView
@@ -40,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18dp"
+        android:paddingLeft="8dp"
         android:textColor="@color/white"
         android:text="TextView" />
 </LinearLayout>
