--- a/app/src/main/res/layout/custom_song_playlist_item.xml
+++ b/app/src/main/res/layout/custom_song_playlist_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/imageViewCover"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/placeholder_img" />
 
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:text="Title"
+            android:padding="8dp"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -32,6 +33,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:text="Artist"
+            android:padding="8dp"
             android:textSize="14sp" />
     </LinearLayout>
 
